my second proyect

--- a/front/index.html
+++ b/front/index.html
@@ -3,12 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mi APP de Peliculas</title>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
   </head>
   <body>
-    <h1>Proyecto de M2</h1>
+      <header>
+        <img src="https://cdn-icons-png.flaticon.com/512/2459/2459778.png" alt="Ícono de la página">
+        <h1>Movies Page</h1>
+          <nav class="main-nav">
+              <ul>
+                  <li><a href="index.html">Inicio</a></li>
+                  <li><a href="about.html">Sobre el Proyecto</a></li>
+                  <li><a href="about.html">Historia del cine</a></li>
+                  <li><a href="contact.html">Webs recomendadas</a></li>
+              </ul>
+          </nav>
+      </header>
+      
+     <main>
+      <section class="info-section">
+        <h2>ESTRENOS DE LA SEMANA</h2>
+        <P>recomendadas</P>
+      </section>
+
+      <section>
+      <div id="container" class="movie-card-container">
+        <!-- <div class="movie-card"></div> -->
+        <!-- Aquí se agregarán las tarjetas de películas dinámicamente con JavaScript
+        <div class="movie-card">
+          <img src="" alt="Pelicula 1">
+          <h3>Pelicula 1</h3>
+          <p>Descripción de la Película 1</p>
+        </div>
+        <div class="movie-card">
+          <img src="" alt="Pelicula 2">
+          <h3>Pelicula 2</h3>
+          <p>Descripción de la Película 2</p>
+        </div>
+        <div class="movie-card">
+          <img src="" alt="Pelicula 3">
+          <h3>Pelicula 3</h3>
+          <p>Descripción de la Película 3</p>
+        </div>
+        <div class="movie-card">
+          <img src="" alt="Pelicula 4">
+          <h3>Pelicula 4</h3>
+          <p>Descripción de la Película 4</p>
+        </div>-->
+      </div>
+    </section>
+  </main>
+
 
     <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
-  </body>
+
+  <footer> 
+    <p>Derechos de autor &copy; 2024 - Mi Empresa
+    Autor: Giovanna Martinez Russo </p>
+  </footer>
+</body>
 </html>
