--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
     <title>Mi APP de Peliculas</title>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
       <header>
@@ -14,9 +15,9 @@
           <nav class="main-nav">
               <ul>
                   <li><a href="index.html">Inicio</a></li>
-                  <li><a href="about.html">Sobre el Proyecto</a></li>
-                  <li><a href="about.html">Historia del cine</a></li>
-                  <li><a href="contact.html">Webs recomendadas</a></li>
+                  <li><a href="pages/about.html"target="_blank">Sobre el Proyecto</a></li>
+                  <li><a href="pages/contact.html"target="_blank">Historia del cine</a></li>
+                  <li><a href="https://streamhint.com/es-es/aleatorio"target="_blank">Webs recomendadas</a></li>
               </ul>
           </nav>
       </header>
@@ -56,8 +57,8 @@
   </main>
 
 
-    <script src="./scripts/tempData.js"></script>
-    <script src="./scripts/index.js"></script>
+   <!-- <script src="./scripts/tempData.js"></script> -->
+    <script src="./scripts/index.js"></script> 
 
   <footer> 
     <p>Derechos de autor &copy; 2024 - Mi Empresa
