--- a/front/pages/history.html
+++ b/front/pages/history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>Historia del cine</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -27,21 +27,19 @@
                   <li class="nav-item"><a class="nav-link" href="https://streamhint.com/es-es/aleatorio" target="_blank">Webs recomendadas</a></li>
                 </ul>
               </nav>
-        <div class="text-center mt-4"> 
-            <span class="d-inline">
-              <h1 class="font-weight-bold italic d-inline size 50px">Proyecto de Peliculas</h1>
-        <p>¡Bienvenidos!</p>
-            </span></div>
-
-    </header>
+              <div class="text-center mt-4"> 
+                <span class="d-inline">
+                  <h1 class="font-weight-bold italic d-inline size 50px">Camino Cinematográfico</h1>
+                </span></div>
     <main>
         <section class="info-section">
-        <h2 class="font-weight-bold-italic ">Sobre Nosotros</h2>
-        <p class="text-monospace"> Esta es mi primera página sobre peliculas, si estas aca es porque sos tan fanatico de las 
-            pelis como yo, la idea comenzo en el momento de querer tener toda la informacion de las peliculas mas taquilleras
-            de los ultimos tiempos, y dandote la info principal sobre cada una de ellas, espero que la disfrutes tanto como yo.</p>
-        </section>
-        </main>
+        <h2  class="font-weight-bold-italic ">Donde todo Comenzo...</h2>
+        <P class="text-monospace" >La historia del cine como espectáculo comenzó en París el 28 de diciembre de 1895.
+        Desde entonces ha experimentado una serie de cambios en varios sentidos. 
+        Por un lado, la tecnología del cinematógrafo ha evolucionado mucho, desde sus inicios con el cine mudo de los hermanos Lumière hasta el cine digital del siglo xxi. 
+        Por otro lado, ha evolucionado el lenguaje cinematográfico, incluidas las convenciones del género, y el uso de planos visuales. Además han surgido así distintos géneros cinematográficos y en último lugar, ha evolucionado con la sociedad, desarrollándose distintos movimientos cinematográficos.</P>
+        </section>  
+    </main>
     <footer class="border p-3 mb-2 bg-light text-dark"> 
         <div class="p-3 mb-2 bg-secondary text-black">
         <p>Derechos de autor &copy; 2024 - Mi Empresa
