--- a/front/index.backup.html
+++ b/front/index.backup.html
@@ -15,34 +15,38 @@
   
   <body>
     <header class="border bg-secondary dark text-white p-4">
-      <section class="container" id="carouselPeliculas">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <section class="container-fluid p-0">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
-              <div class="carousel-slide">
-                <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
-              <div class="carousel-slide">
-                <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
-              <div class="carousel-slide">
-                <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
-              </div>
-            </div>
+
+          <div class="carousel-item active">
+            <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain"  class="d-block w-100" alt="First slide" >
           </div>
+          <div class="carousel-caption">
+          <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" class="d-block w-100" />
+           </div>
+
+          <div class="carousel-item">
+            <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" class="d-block w-100" alt="Second slide" >
+          </div>
+          <div class="carousel-caption">
+          <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" class="d-block w-100" />
+          </div>
+
+          <div class="carousel-item">
+            <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" class="d-block w-100" alt="Third slide" >
+          </div>
+          <div class="carousel-caption">
+            <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" class="d-block w-100" />
+          </div>
+
         </div>
-      </section>    
+      </div>
+    </section>
     
       <div class="text-center mt-4"> 
         <span class="d-inline">
-        <img class="logoPeliculas" src="https://w7.pngwing.com/pngs/90/19/png-transparent-film-cinema-movies-miscellaneous-text-logo.png" alt="Ícono de la página" style="width: 100px;">
+        <img src="https://w7.pngwing.com/pngs/90/19/png-transparent-film-cinema-movies-miscellaneous-text-logo.png" alt="Ícono de la página" style="width: 100px;">
         </span>
     </div>
     <div class="text-center mt-4"> 
