--- a/front/index.html
+++ b/front/index.html
@@ -19,9 +19,9 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
+              <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="First slide" />
               <div class="carousel-slide">
-                <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
+                <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="First slide" />
               </div>
             </div>
             <div class="carousel-item">
@@ -31,9 +31,9 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
+              <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="Third slide" />
               <div class="carousel-slide">
-                <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
+                <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="Third slide" />
               </div>
             </div>
           </div>
@@ -98,8 +98,9 @@
 
 
    <!-- <script src="./scripts/tempData.js"></script> -->
-   <script src="./scripts/renderCards.js"></script>
-    <script src="./scripts/index.js"></script> 
+   <!--<script src="./scripts/renderCards.js"></script> -->
+   <!-- <script src="./scripts/test.js"></script> -->
+     <script src="./public/bundle.js"></script>  
 
     <footer class="border p-3 mb-2 bg-light text-dark"> 
       <div class="p-3 mb-2 bg-secondary text-black">
