--- a/front/pages/carousel.html
+++ b/front/pages/carousel.html
@@ -1,110 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
 </head>
+
 <body>
-   <!--<section class="container-fluid p-0">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-  
-            <div class="carousel-item active">
-              <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain"
-                class="d-block w-100" alt="First slide">
-            </div>
-            <div class="carousel-caption">
-              <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain"
-                class="d-block w-100" />
-            </div>
-  
-            <div class="carousel-item">
-              <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" class="d-block w-100"
-                alt="Second slide">
-            </div>
-            <div class="carousel-caption">
-              <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" class="d-block w-100" />
-            </div>
-  
-            <div class="carousel-item">
-              <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" class="d-block w-100" alt="Third slide">
-            </div>
-            <div class="carousel-caption">
-              <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" class="d-block w-100" />
-            </div> -->
-            <style>
-                * {
-  text-align: center;
-  color: #779;
-}
-.carousel-item > img {
-  aspect-ratio: 16/9;
-  object-fit: cover; /* Maintain aspect ratio and cover the entire container */
-  max-width: 100%;
-  width: 100%;
-}
-.carousel-slide {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.carousel-slide > img {
-  height: 40vw;
-}
-.carousel-item::before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  inset: 0;
-  backdrop-filter: blur(5px);
-}
+  <style>
+    * {
+      text-align: center;
+      color: #779;
+    }
 
-            </style>
+    .carousel-item>img {
+      aspect-ratio: 16/9;
+      object-fit: cover;
+      max-width: 100%;
+      width: 100%;
+    }
 
-            <h1>Carousel Autoplay with BG Blur</h1>
-            <h2>Bootstrap 4.1</h2>
-            <section class="container">
-              <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
-                    <div class="carousel-slide">
-                      <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
-                    <div class="carousel-slide">
-                      <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
-                    <div class="carousel-slide">
-                      <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
+    .carousel-slide {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .carousel-slide>img {
+      height: 40vw;
+    }
+
+    .carousel-item::before {
+      content: "";
+      position: absolute;
+      z-index: 0;
+      inset: 0;
+      backdrop-filter: blur(5px);
+    }
+  </style>
+
+  <h1>Carousel Autoplay with BG Blur</h1>
+  <h2>Bootstrap 4.1</h2>
+  <section class="container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
+          <div class="carousel-slide">
+            <img src="https://pics.filmaffinity.com/Toy_Story_2-808118823-large.jpg" alt="Third slide" />
           </div>
         </div>
-      </section>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-    
+        <div class="carousel-item">
+          <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
+          <div class="carousel-slide">
+            <img src="https://i.ytimg.com/vi/fO_f3rigBgM/maxresdefault.jpg" alt="Second slide" />
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
+          <div class="carousel-slide">
+            <img src="https://th.bing.com/th/id/OIP.T5KfUIjVXgfU3pysyQ25VwAAAA?rs=1&pid=ImgDetMain" alt="First slide" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  </div>
+  </div>
+  </section>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
